# wtfismygearscore.com

./: .codeclimate.yml  .dockerignore  .drone.sec  .drone.yml  .drone.yml.sig  .env.sample  .gitignore  .gitlab-ci.yml  .rubocop.yml  .scss-lint.yml  .travis.yml  Brewfile  Brewfile.lock.json  CHECKS  CONTRIBUTING.md  Cargo.toml  DOKKU_SCALE  Dockerfile  Gemfile  Guardfile  Procfile  README.md  STYLEGUIDE.md  app.json  config.ru  nginx.conf.sigil
.travis/: deploy.key.enc
app/channels/: character_update_channel.rb
app/constraints/: region_constraint.rb
app/controllers/: application_controller.rb  characters_controller.rb  comments_controller.rb  home_controller.rb  legacy_controller.rb
app/helpers/: application_helper.rb  characters_helper.rb  home_helper.rb  url_helper.rb
app/jobs/: application_job.rb  character_updater_job.rb  comment_posted_job.rb  median_gearscore_updater_job.rb  refresh_recent_comments_job.rb  refresh_stale_characters_job.rb  update_character_from_armory_job.rb
app/models/: application_record.rb  character.rb  character_update_broadcaster.rb  character_updater.rb  comment.rb  comment_notifier.rb  gearscore_calculator.rb  median_gearscore.rb  realm.rb  recent_comment.rb
app/presenters/: application_presenter.rb  comment_presenter.rb  (+4 more)
config/: application.rb  cable.yml  database.yml  puma.rb  routes.rb  secrets.yml
db/: schema.rb  seeds.rb
lib/: akismet.rb  armory.rb  expirable_key.rb  warning_filter.rb
public/: 400.html  404.html  422.html  500.html  502.html  504.html
spec/: rails_helper.rb  spec_helper.rb
src/: lib.rs  main.rs
(+163 files in other folders)
