[package]
name = "wtfismygs"
version = "1.0.0"
authors = ["Christian Wesselhoeft <hi@xtian.us>"]
edition = "2018"
readme = "README.md"
license = "AGPL-3.0"

[lib]
name = "wtfismygs_lib"
path = "src/lib.rs"

[[bin]]
name = "wtfismygs"
path = "src/main.rs"
doc = false

[dependencies]
clap = "2.33.0"
hyper = "0.13.2"
pretty_env_logger = "0.4.0"
thruster = {version = "0.9.0-alpha", features = ["hyper_server"]}
